src/objects/Apttus_Base2__UIComponentConfigActionProviderMeta__mdt.object
<CustomObject>
    <fields>
        <fullName>Apttus_Base2__ClassName__c</fullName>
        <label>Provider Class Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__Configuration__c</fullName>
        <label>Configuration</label>
        <referenceTo>Apttus_Base2__UIComponentConfigurationMeta__mdt</referenceTo>
        <relationshipLabel>Configuration</relationshipLabel>
        <relationshipName>Configuration</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__PackageName__c</fullName>
        <label>Package name for data provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Base2__ProviderId__c</fullName>
        <label>Action Provider</label>
        <referenceTo>Apttus_Base2__UIComponentProviderMeta__mdt</referenceTo>
        <relationshipLabel>Action Provider</relationshipLabel>
        <relationshipName>ActionProvider</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Apttus UI Config Action Provider Meta</label>
    <pluralLabel>Apttus UI Config Action Providers Meta</pluralLabel>
</CustomObject>